# sqlfluff_nb

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
sqlfluff_nb/: main.py  utils.py
tests/: current_nb.ipynb  fixed_nb.ipynb  test.ipynb  test.sql  test_sqlfluff_nb.py
