[tool.poetry]
name = "sqlfluff-nb"
version = "0.1.0"
description = ""
authors = ["jeff-tilton"]

[tool.poetry.scripts]
sfnb = "sqlfluff_nb.main:main"

[tool.poetry.dependencies]
python = "^3.8"
sqlfluff = "^1.4.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
jupyter = "^1.0.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
